# cuda-redist-find-features

./: .gitignore  LICENSE  README.md  flake.nix  lookup_db.json  pyproject.toml  stage0-index-of-tarball-hashes.json  stage1-map-from-tarball-hash-to-unpacked-tarball.json  stage2-map-from-unpacked-tarball-to-feature.json  stage3-map-from-unpacked-tarball-to-nar-hash.json  stage4-index-of-nar-hash-to-feature.json
.github/workflows/: ci-reusable.yaml  ci.yaml
cuda_redist_find_features/: __main__.py  features.py  generic.py  manifest.py  nix.py  outputs.py  types.py  utilities.py  version.py  version_constraint.py
cuda_redist_find_features/_types/: __init__.py  _cuda_arch.py  _cuda_variant_name.py  _cuda_variant_version.py  _future_status.py  _lib_so_name.py  _log_level.py  _md5.py  _nix.py  _nix_store_entry.py  _non_negative_int_str.py  _package_id.py  _package_name.py  _platform.py  _pydantic.py  _redist_name.py  _sha256.py  _sri_hash.py  _task.py  _version.py
cuda_redist_find_features/cmd/: __init__.py  __main__.py  download_manifests.py  download_manifests_impl.py  process_manifests.py  process_manifests_impl.py
cuda_redist_find_features/cmd/_types/: __init__.py  _http_url.py  _version.py
cuda_redist_find_features/cmd/argument/: __init__.py  _manifest_dir.py  _overrides_json.py  _url.py  manifest_dir.py  url.py
cuda_redist_find_features/cmd/arguments/: __init__.py  _manifest_dir.py  _url.py
cuda_redist_find_features/cmd/option/: __init__.py  _log_level.py  _max_version.py  _min_version.py  _redist.py  _version.py  cleanup.py  debug.py  max_version.py  min_version.py  no_parallel.py  version.py
cuda_redist_find_features/cmd/options/: __init__.py  _cleanup.py  _debug.py  _max_version.py  _min_version.py  _no_parallel.py  _version.py
cuda_redist_find_features/cmd/types/: __init__.py  _http_url.py  _version.py  http_url.py  version.py
cuda_redist_find_features/manifest/feature/: __init__.py  cuda_architectures.py  gpu_architectures.py  manifest.py  needed_libs.py  outputs.py  package.py  provided_headers.py  provided_libs.py  release.py
cuda_redist_find_features/manifest/nvidia/: __init__.py  _manifest.py  _manifest_ref.py  _package.py  _release.py  manifest.py  manifest_ref.py  package.py  release.py
cuda_redist_find_features/types/: __init__.py  _cuda_arch.py  _future_status.py  _lib_so_name.py  _md5.py  _non_negative_int.py  _package_name.py  _platform.py  _pydantic.py  _sha256.py  _task.py  _version.py  _version_constraint.py
modules/: data.nix  default.nix  types.nix  utils.nix
modules/data/: default.nix
modules/data/indices/: package-info.json  sha256-and-relative-path.json
modules/data/stages/: default.nix  stage0.json  (+5 more)
modules/feature/: cuda-versions-in-lib.nix  outputs.nix
modules/stages/: default.nix  stage0.nix  stage1.nix  stage2.nix  stage3.nix  stage4.nix
modules/types/: default.nix
nix/: default.nix
nix/apps/: default.nix
nix/devShells/: default.nix
nix/modules/: default.nix  stage0.nix  stage1.nix  stage2.nix  stages.nix  utils.nix
nix/overlays/: default.nix
tensorrt/: README.md  helper.sh  redistrib_10.0.0.json  redistrib_10.0.1.json  redistrib_10.1.0.json  redistrib_10.2.0.json  redistrib_8.6.1.json
(+27 files in other folders)
