[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cuda_redist_find_features"
version = "0.1.0"
authors = [{ name = "Connor Baker", email = "connorbaker@tweag.io" }]
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
description = "Find the features of a CUDA redistributable package"
dependencies = [
    "annotated-types>=0.5.0",
    "click>=8.1.0", 
    "pydantic>=2.0.0",
    "rich>=13.3.5",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = ["black>=21.9b0", "ruff>=0.3.0"]

[project.scripts]
cuda-redist-find-features = "cuda_redist_find_features.cmd:main"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
preview = true
select = [
    "F",
    "E",
    "W",
    "I",
    "PL",
    "FURB",
    "LOG",
    "RUF",
    "G",
    "TID",
]
ignore = [
    # Ignore functions with many arguments (I like currying)
    "PLR0913"
]
line-length = 120


[tool.pyright]
include = ["./cuda_redist_find_features"]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"